Cambios en el modelo